@@ -1,3 +1,8 @@
+2005-04-04  Davyd Madeley  <davyd@madeley.id.au>
+
+        * preferences.c: (gnome_volume_applet_preferences_init):
+          Fix type-ahead bug (#171367). Backported from HEAD.
+
 2005-03-20  Kjartan Maraas  <kmaraas@gnome.org>
 
 	* applet.c: (flip_byte), (flip_pixel), (flip): Fix
